--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "lint": "echo \"No ESLint configured\""
   },
   "dependencies": {
+    "lucide-react": "^0.263.1",
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
