--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,7 @@ Pillow>=10.0.0
 reportlab>=4.0.0
 openpyxl>=3.1.0
 logfire[fastapi]>=0.49.0
+
+# Redis for caching (optional - app works without it)
+redis>=5.0.0
+hiredis>=2.3.0
