--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,9 @@ langchain-openai>=0.1.23
 langsmith==0.1.144
 psycopg[binary,pool]>=3.2.0
 
+# OpenAI for Whisper API (voice transcription)
+openai>=1.40.0
+
 # Supabase + realtime client expects websockets >=13 (provides websockets.asyncio)
 supabase==2.7.3
 websockets>=13.0,<14.0
