feat: Semana 1 completa - Tronco común Maninos
- Auth + BD: Supabase Auth, migraciones tronco común
- RLS: Row Level Security para todas las tablas
- FlowValidator V2: 6 macroprocesos con conexiones
- ComercializarAgent: 7 herramientas (comité, desembolso, promoción, crédito, venta, recuperación, fidelización)
- AdquirirAgent: 5 herramientas (búsqueda 9 fuentes, evaluación checklist 26 puntos, inspección, oferta, inventario)
- IncorporarAgent: 6 herramientas (perfil Anexo 1, KYC Stripe Identity, DTI, contrato Anexo 3, seguimiento)
- Stripe Identity: Integración KYC automático con webhook

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,9 @@ websockets>=13.0,<14.0
 # Email - Resend API (cloud-friendly, no SMTP port blocking)
 resend>=2.4.0
 
+# Stripe - Payments and Identity verification (KYC)
+stripe>=7.0.0
+
 # the rest of your deps
 python-dotenv
 pypdf
