🏗️ Major architecture improvements (4 changes)
1. PostgresSaver with connection pooling
   - langgraph-checkpoint-postgres for persistent memory
   - Connection pooling via psycopg_pool (min=1, max=10)
   - Proper fallback chain: Postgres → SQLite → Memory

2. Tools return dict instead of str(result)
   - Preserves data structure for better LLM parsing
   - Updated all 11 IncorporarAgent tools
   - Return types now properly typed as dict

3. Structured logging with structlog
   - New core/logging.py module
   - JSON output in production, colored console in dev
   - Context binding (session_id, user_id, etc.)
   - Updated app.py and langgraph_agent.py

4. Typed configuration with pydantic-settings
   - New core/config.py module
   - All env vars validated and typed
   - Sensitive keys hidden from logs (repr=False)
   - Computed properties (is_development, database_connection_url)
   - Updated app.py to use settings

New files:
- core/__init__.py
- core/logging.py
- core/config.py

Updated requirements.txt:
- structlog>=24.1.0
- pydantic-settings>=2.0.0

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,12 @@ resend>=2.4.0
 # Stripe - Payments and Identity verification (KYC)
 stripe>=7.0.0
 
+# Structured logging (better than standard logging)
+structlog>=24.1.0
+
+# Typed configuration management (replaces python-dotenv for settings)
+pydantic-settings>=2.0.0
+
 # the rest of your deps
 python-dotenv
 pypdf
