--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@
 # --- Core Framework ---
 fastapi==0.112.2
 uvicorn==0.30.6
-pydantic>=2.0.0
+pydantic[email]>=2.0.0
 pydantic-settings>=2.0.0
+email-validator>=2.0.0
 python-dotenv>=1.0.0
 python-multipart>=0.0.9
 
