feat: Unify mobile & desktop apps + AI Chat Widget + mobile responsiveness
Major changes:
- Replaced separate mobile app with responsive desktop layouts
- /mobile now redirects to /homes
- Created floating AI Chat Widget (text + voice) added to Homes & Capital layouts
- Client portal: mobile hamburger menu, responsive header, stacking cards
- Capital dashboard: responsive aging analysis grid (grid-cols-2 sm:grid-cols-4)
- Capital payments: scrollable tab buttons with compact sizing on mobile
- Capital applications: cards stack vertically on small screens
- Capital accounting: added overflow-x-auto to accounts table
- Client casas: 2-col filter grid on small screens
- Client mi-cuenta: responsive sale cards, compact header on mobile
- PWA manifest start_url updated to /homes
- Middleware: removed mobile auto-redirect
- Supabase middleware: removed /mobile from public routes
- globals.css: mobile-first responsive enhancements (fonts, spacing, touch targets, safe areas)

--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -2,11 +2,11 @@
   "name": "Maninos AI",
   "short_name": "Maninos",
   "description": "Plataforma inteligente para casas móviles - Maninos Capital LLC",
-  "start_url": "/mobile",
+  "start_url": "/homes",
   "display": "standalone",
-  "background_color": "#0a0f1a",
+  "background_color": "#fafaf8",
   "theme_color": "#d4a853",
-  "orientation": "portrait-primary",
+  "orientation": "any",
   "icons": [
     {
       "src": "/icons/icon-192.png",
@@ -26,4 +26,3 @@
   "scope": "/",
   "prefer_related_applications": false
 }
-
